--- a/package.json
+++ b/package.json
@@ -6,31 +6,59 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start" : "vue-cli-service serve"
+  },
+  "config": {
+    "version": "1",
+    "port": "8090",
+    "nodejsserver_dist_folder": "_dist/dist"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@mdi/font": "^5.2.45",
+    "@vue/composition-api": "^0.4.0",
+    "axios": "^0.19.0",
+    "core-js": "^3.6.5 ",
+    "material-design-icons": "^3.0.1",
+    "material-design-icons-iconfont": "^6.1.0",
+    "ts-loader": "^6.2.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-i18n": "^8.18.2",
+    "vue-router": "^3.1.2",
+    "vuetify": "^2.4.6"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.19",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@babel/preset-env": "^7.10.2",
+    "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-plugin-typescript": "^4.5.9",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^1.2.0",
+    "babel-eslint": "^10.1.0",
+    "copy-webpack-plugin": "^4.6.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "prettier": "^2.2.1",
-    "typescript": "~4.1.5",
-    "vue-template-compiler": "^2.6.11"
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^7.9.0",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "typescript": "^4.1.2",
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ],
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
   }
 }
